# clion-modern-opengl

./: CMakeLists.txt  README.md
include/: GLSLProgram.h
src/cpp/: App.cpp  GLSLProgram.cpp  main.cpp
src/glsl/: triangle.fs  triangle.vs
